--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="logo" href=""><span class="logocolor">Web</span>Studio</a>
           <ul class="list">
             <li class="nav-item">
-              <a class="link" href="link-currente">Студия</a>
+              <a class="link-current" href="">Студия</a>
             </li>
             <li class="nav-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
@@ -36,7 +36,7 @@
           <li class="nav-item">
             <a class="link-contact" href="mailto:info@devstudio.com">
               <svg class="nav-icons" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use>
+                <use href="./Images/Icons/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -44,7 +44,7 @@
           <li class="nav-item">
             <a class="link-contact" href="telto:+380961111111">
               <svg class="nav-icons" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
+                <use href="./Images/Icons/sprite.svg#icon-smartphone"></use>
               </svg>
               +380961111111
             </a>
@@ -64,22 +64,22 @@
           <ul class="features-type">
             <li class="features-icons">
               <svg class="features-icons-svg">
-                <use href="./images/icons.svg#icon-antenna"></use>
+                <use href="./Images/Icons/sprite.svg#icon-antenna"></use>
               </svg>
             </li>
             <li class="features-icons">
               <svg class="features-icons-svg">
-                <use href="./images/icons.svg#icon-clock"></use>
+                <use href="./Images/Icons/sprite.svg#icon-clock"></use>
               </svg>
             </li>
             <li class="features-icons">
               <svg class="features-icons-svg">
-                <use href="./images/icons.svg#icon-diagram"></use>
+                <use href="./Images/Icons/sprite.svg#icon-diagram"></use>
               </svg>
             </li>
             <li class="features-icons">
               <svg class="features-icons-svg">
-                <use href="./images/icons.svg#icon-astronaut"></use>
+                <use href="./Images/Icons/sprite.svg#icon-astronaut"></use>
               </svg>
             </li>
           </ul>
