--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
               <a class="link" href="./index.html">Студия</a>
             </li>
             <li class="nav-item">
-              <a class="link" href="link-current">Портфолио</a>
+              <a class="link-current" href="">Портфолио</a>
             </li>
             <li class="nav-item"><a class="link" href="">Контакты</a></li>
           </ul>
