--- a/index.html
+++ b/index.html
@@ -150,28 +150,36 @@
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -191,28 +199,36 @@
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -232,28 +248,36 @@
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -273,28 +297,36 @@
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-facebook"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-icons-item">
                     <a href="" class="social-icons-link">
                       <svg class="social-icons-svg">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
+                        <use
+                          href="./Images/Icons/sprite.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -312,42 +344,42 @@
             <li class="clients-example">
               <a href="" class="clients-link">
                 <svg class="clients-icons-svg" width="45" height="50">
-                  <use href="./images/icons.svg#icon-logo1"></use>
+                  <use href="./Images/Icons/sprite.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-example">
               <a href="" class="clients-link">
                 <svg class="clients-icons-svg" width="40" height="52">
-                  <use href="./images/icons.svg#icon-logo2"></use>
+                  <use href="./Images/Icons/sprite.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-example">
               <a href="" class="clients-link">
                 <svg class="clients-icons-svg" width="41" height="43">
-                  <use href="./images/icons.svg#icon-logo3"></use>
+                  <use href="./Images/Icons/sprite.svg#icon-logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-example">
               <a href="" class="clients-link">
                 <svg class="clients-icons-svg" width="80" height="42">
-                  <use href="./images/icons.svg#icon-logo4"></use>
+                  <use href="./Images/Icons/sprite.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-example">
               <a href="" class="clients-link">
                 <svg class="clients-icons-svg" width="60" height="47">
-                  <use href="./images/icons.svg#icon-logo5"></use>
+                  <use href="./Images/Icons/sprite.svg#icon-logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-example">
               <a href="" class="clients-link">
                 <svg class="clients-icons-svg" width="89" height="46">
-                  <use href="./images/icons.svg#icon-logo6"></use>
+                  <use href="./Images/Icons/sprite.svg#icon-logo6"></use>
                 </svg>
               </a>
             </li>
@@ -386,28 +418,28 @@
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-instagram"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-facebook"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
