--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
           <li class="nav-item">
             <a class="link-contact" href="mailto:info@devstudio.com">
               <svg class="nav-icons" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use>
+                <use href="./Images/Icons/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -45,7 +45,7 @@
           <li class="nav-item">
             <a class="link-contact" href="telto:+380961111111">
               <svg class="nav-icons" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
+                <use href="./Images/Icons/sprite.svg#icon-smartphone"></use>
               </svg>
               +380961111111
             </a>
@@ -198,28 +198,28 @@
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-instagram"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-facebook"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icons-item">
                 <a href="" class="footer social-icons-link">
                   <svg class="footer social-icons-svg">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    <use href="./Images/Icons/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
