--- a/index.html
+++ b/index.html
@@ -61,30 +61,13 @@
       <!--Features section-->
       <section class="section">
         <div class="container">
-          <ul class="features-type">
-            <li class="features-icons">
-              <svg class="features-icons-svg">
-                <use href="./Images/Icons/sprite.svg#icon-antenna"></use>
-              </svg>
-            </li>
-            <li class="features-icons">
-              <svg class="features-icons-svg">
-                <use href="./Images/Icons/sprite.svg#icon-clock"></use>
-              </svg>
-            </li>
-            <li class="features-icons">
-              <svg class="features-icons-svg">
-                <use href="./Images/Icons/sprite.svg#icon-diagram"></use>
-              </svg>
-            </li>
-            <li class="features-icons">
-              <svg class="features-icons-svg">
-                <use href="./Images/Icons/sprite.svg#icon-astronaut"></use>
-              </svg>
-            </li>
-          </ul>
           <ul class="list-features">
             <li class="item">
+              <div class="features-icons">
+                <svg class="features-icons-svg">
+                  <use href="./Images/Icons/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -92,6 +75,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="features-icons">
+                <svg class="features-icons-svg">
+                  <use href="./Images/Icons/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -99,6 +87,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="features-icons">
+                <svg class="features-icons-svg">
+                  <use href="./Images/Icons/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -106,6 +99,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="features-icons">
+                <svg class="features-icons-svg">
+                  <use href="./Images/Icons/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
