--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
           <a class="logo" href=""><span class="logocolor">Web</span>Studio</a>
           <ul class="list">
             <li class="nav-item">
-              <a class="link-current" href="">Студия</a>
+              <a class="link current" href="#">Студия</a>
             </li>
             <li class="nav-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-item"><a class="link" href="">Контакты</a></li>
+            <li class="nav-item">
+              <a class="link" href="#">Контакты</a>
+            </li>
           </ul>
         </nav>
         <!--Contacts-->
